@@ -1,4 +1,4 @@
-VERSION=1.17
+VERSION=1.18
 PYTHON=python
 
 test:
